Распаррелил загрузку расписания для препода и ограничил семафорами