@@ -1,6 +1,5 @@
 package ru.semavin.telegrambot.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
@@ -10,13 +9,11 @@ import java.util.concurrent.Executors;
 @Configuration
 public class ExecutorsConfig {
 
-
-    @Value("${database.maximum.parallel}")
-    private int maximumParallel;
-
     @Bean
     public Executor executor() {
-        return Executors.newFixedThreadPool(maximumParallel);
+        return Executors.newThreadPerTaskExecutor(
+                Thread.ofVirtual().name("v", 1).factory()
+        );
     }
 
 }
